test/tests/stages/18_structures/invalid_struct_tags/for_loop_scope_2.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  None: 
                  Pointer: 
                    Void: 
                  None: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitExp: 
                  None: 
                None: 
                CArrow: 
                  TIdentifier: i
                  CCast: 
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    Pointer: 
                      Structure: 
                        TIdentifier: s
                        Bool: 0
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[3]: 
                      CD: 
                        CStructDecl: 
                          CStructDeclaration: 
                            TIdentifier: s
                            Bool: 0
                            List[1]: 
                              CMemberDeclaration: 
                                TIdentifier: i
                                Int: 
                      CD: 
                        CVarDecl: 
                          CVariableDeclaration: 
                            TIdentifier: x
                            CCompoundInit: 
                              List[1]: 
                                CSingleInit: 
                                  CConstant: 
                                    CConstInt: 
                                      TInt: 1
                                    None: 
                                  None: 
                              None: 
                            Structure: 
                              TIdentifier: s
                              Bool: 0
                            None: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: ptr
                              None: 
                            CAddrOf: 
                              CVar: 
                                TIdentifier: x
                                None: 
                              None: 
                            None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
